
option java_outer_classname="RegisterPollingNotificationCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;

message RegisterPollingNotificationCommand {
	optional int64 requestId = 1;
	optional sint32 callbackId = 2;
	optional int64 clientLastViewId = 3 [default=-1];
}